src/objects/dwp_kitv__Visit__c.object
<CustomObject>
    <description>Main object to manage visits</description>
    <fields>
        <fullName>Check_In_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Check In Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_In_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Check In Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_In_Geolocation__c</fullName>
        <label>Check In Geolocation</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Check_Out_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Check Out Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Out_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Check Out Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_Out_Geolocation__c</fullName>
        <label>Geolocalización del check out</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Fecha_cierre__c</fullName>
        <description>Fecha en la que se cierra la visita.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha cierre de visita</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GBL_ApoyosConCheck__c</fullName>
        <description>Se almacena el número de apoyos que tiene una visita, que cumplan las condiciones para enviarse en el cuerpo de la minuta.</description>
        <label>Apoyos para minuta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacto_Decisor_Ejecutor__c</fullName>
        <description>Cuenta los contactos decisores que existen en los contactos de la visita.</description>
        <label>Resumen Contacto Decisor/Ejecutor</label>
        <summaryFilterItems>
            <field>dwp_kitv__Visit_Contact__c.Decisor_Ejecutor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>dwp_kitv__Visit_Contact__c.dwp_kitv__visit_id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Localizacion__c</fullName>
        <description>Imagen obtenida de la API de Google Maps según las cordenadas suministradas devuelve el mapa.</description>
        <formula>IF(
NOT(ISBLANK( Check_In_Geolocation__c )),
IMAGE(&apos;https://maps.googleapis.com/maps/api/staticmap?center=&apos; + TEXT(  Check_In_Geolocation__Latitude__s ) + &apos;,&apos; + TEXT( Check_In_Geolocation__Longitude__s ) + &apos;&amp;markers=&apos; + TEXT( Check_In_Geolocation__Latitude__s ) + &apos;,&apos; + TEXT(  Check_In_Geolocation__Longitude__s ) + &apos;&amp;zoom=16&amp;scale=1&amp;size=650x350&amp;maptype=roadmap&amp;key=&apos; + $Setup.cico__GBL_Google_maps_API_keys__c.cico__Google_static_maps_API_key__c,
&apos;No map available&apos;),
&apos;Check in pending&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Localización</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>IF(
NOT(ISBLANK( Check_In_Geolocation__c )),
IMAGE(&apos;https://maps.googleapis.com/maps/api/staticmap?center=&apos; + TEXT( Check_In_Geolocation__Latitude__s ) + &apos;,&apos; + TEXT(Check_In_Geolocation__Longitude__s ) + &apos;&amp;markers=&apos; + TEXT(Check_In_Geolocation__Latitude__s ) + &apos;,&apos; + TEXT( Check_In_Geolocation__Longitude__s ) + &apos;&amp;zoom=16&amp;scale=1&amp;size=550x300&amp;maptype=roadmap&amp;key=&apos; + $Setup.cico__GBL_Google_maps_API_keys__c.cico__Google_static_maps_API_key__c,
&apos;No map available&apos;),
&apos;Check in pending&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BHP_Fecha_Envio_Minuta__c</fullName>
        <description>Fecha de envío de la minuta se graba al cambiar la minuta de estatus a &apos;Visit Completed - Minute Sent&apos;</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Fecha de envío de la minuta</inlineHelpText>
        <label>Fecha Envío Minuta</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MX_BHP_TipoVisita__c</fullName>
        <description>Tipos de visitas BHP</description>
        <formula>IF(
    OR(RecordType.DeveloperName=&apos;MX_BHP_VisitaComercial_st&apos;,RecordType.DeveloperName=&apos;MX_BHP_VisitaComercial&apos;,RecordType.DeveloperName=&apos;MX_BHP_VisitaComercial_CO&apos;,RecordType.DeveloperName=&apos;MX_BHP_VisitaComercial_FI&apos;,RecordType.DeveloperName=&apos;MX_BHP_VisitaComercial_MI&apos;,RecordType.DeveloperName=&apos;Visita_Comercial&apos;,RecordType.DeveloperName=&apos;GBL_Visita_Comercial_Realizada&apos;,RecordType.DeveloperName=&apos;Visita_Comercial_Arrenged&apos;)
    ,&apos;Visita Comercial&apos;
    ,IF(
        OR(RecordType.DeveloperName=&apos;MX_BHP_VisitaSeguimiento_st&apos;,RecordType.DeveloperName=&apos;MX_BHP_VisitaSeguimiento&apos;,RecordType.DeveloperName=&apos;MX_BHP_VisitaSeguimiento_CO&apos;,RecordType.DeveloperName=&apos;MX_BHP_VisitaSeguimiento_FI&apos;,RecordType.DeveloperName=&apos;MX_BHP_VisitaSeguimiento_MI&apos;,RecordType.DeveloperName=&apos;Visita_Seguimiento&apos;,RecordType.DeveloperName=&apos;GBL_Visita_Seguimiento_Finalizada&apos;,RecordType.DeveloperName=&apos;Visita_Seguimiento_Arrenged&apos;)
        , &apos;Visita Seguimiento&apos;
        ,IF(
            OR(RecordType.DeveloperName=&apos;MX_BHP_VisitaEstrategica_st&apos;,RecordType.DeveloperName=&apos;MX_BHP_VisitaEstrategica&apos;,RecordType.DeveloperName=&apos;MX_BHP_VisitaEstrategica_CO&apos;,RecordType.DeveloperName=&apos;MX_BHP_VisitaEstrategica_FI&apos;,RecordType.DeveloperName=&apos;MX_BHP_VisitaEstrategica_MI&apos;,RecordType.DeveloperName=&apos;Visita_Estrategica&apos;,RecordType.DeveloperName=&apos;Visita_Estrategica_Arrenged&apos;,RecordType.DeveloperName=&apos;GBL_Visita_Estrat_gica_Realizada&apos;)
            , &apos;Visita Estrategica&apos;
            ,IF(
                OR(RecordType.DeveloperName=&apos;MX_BHI_Visita_Negociacion&apos;,RecordType.DeveloperName=&apos;MX_BHI_Visita_Negociacion_CI&apos;,RecordType.DeveloperName=&apos;MX_BHI_Visita_Negociacion_CO&apos;,RecordType.DeveloperName=&apos;MX_BHI_Visita_Negociacion_MI&apos;,RecordType.DeveloperName=&apos;MX_BHI_Visita_Negociacion_FI&apos;)
                , &apos;Visita Negociación&apos;
                ,IF(
                    OR(RecordType.DeveloperName=&apos;MX_BHI_Visita_Capacitacion&apos;,RecordType.DeveloperName=&apos;MX_BHI_Visita_Capacitacion_CI&apos;,RecordType.DeveloperName=&apos;MX_BHI_Visita_Capacitacion_CO&apos;,RecordType.DeveloperName=&apos;MX_BHI_Visita_Capacitacion_MI&apos;,RecordType.DeveloperName=&apos;MX_BHI_Visita_Capacitacion_FI&apos;)
                    , &apos;Visita Capacitación&apos;
                    ,IF(
                        OR(RecordType.DeveloperName=&apos;MX_BHI_Visita_Prospeccion&apos;,RecordType.DeveloperName=&apos;MX_BHI_Visita_Prospeccion_CO&apos;,RecordType.DeveloperName=&apos;MX_BHI_Visita_Prospeccion_FI&apos;)
                        , &apos;Visita Prospección&apos;
                                           ,IF(
                        OR(RecordType.DeveloperName=&apos;Llamada_comercial&apos;,RecordType.DeveloperName=&apos;LLamada_Comercial_Arranged&apos;,RecordType.DeveloperName=&apos;GBL_Llamada_Comercial_Realizada&apos;)
                        , &apos;Llamada comercial&apos;
                                           ,IF(
                        OR(RecordType.DeveloperName=&apos;GBL_Llamada_de_Seguimiento_Realizada&apos;,RecordType.DeveloperName=&apos;Llamada_seguimiento&apos;,RecordType.DeveloperName=&apos;Llamada_Seguimiento_Arrenged&apos;)
                        , &apos;Llamada de Seguimiento&apos;, &apos;N/A&apos;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Visita</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BIE_Producto__c</fullName>
        <description>Producto para las Visitas BIE</description>
        <label>Producto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CSL</fullName>
                </value>
                <value>
                    <fullName>DCM</fullName>
                </value>
                <value>
                    <fullName>ECM</fullName>
                </value>
                <value>
                    <fullName>M&amp;A</fullName>
                </value>
                <value>
                    <fullName>PF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_BIE_TipoVisitaLLamada__c</fullName>
        <description>Campo para identificar el tipo de visita BIE</description>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pitch</fullName>
                </value>
                <value>
                    <fullName>Market update</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Teaching</fullName>
                </value>
                <value>
                    <fullName>Comercial</fullName>
                </value>
                <value>
                    <fullName>Estratégica</fullName>
                </value>
                <value>
                    <fullName>Seguimiento</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_BPP_TypVis__c</fullName>
        <description>Campo formula que permite diferenciar tipo de visita para gráfico de inicio.</description>
        <formula>IF(BEGINS(RecordType.DeveloperName, &apos;Llamada BPyP&apos;), &apos;Llamada &apos;, IF(BEGINS(RecordType.DeveloperName, &apos;Visita BPyP&apos;), &apos;Reporte &apos;, &apos;&apos;))+  TEXT(MX_BIE_TipoVisitaLLamada__c)</formula>
        <label>MX_BPP_TypVis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPP_VerifyOwner__c</fullName>
        <description>Campo formula que verifica el propietario de la cuenta.</description>
        <formula>IF(OwnerId = dwp_kitv__account_id__r.OwnerId , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MX_BPP_VerifyOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_BPyP_Oficina__c</fullName>
        <description>Este campo fórmula muestra la oficina BPyP del propietario de la visita.</description>
        <formula>TEXT( Owner:User.BPyP_ls_NombreSucursal__c )</formula>
        <label>Oficina BPyP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPyP_Termino_visita_sin_Minuta__c</fullName>
        <description>Se selecciona casilla de verificación si el número de contactos es cero y si el estado de la visita esta en &quot;Visita Completada&quot;.</description>
        <formula>AND(dwp_kitv__visit_contact_persons_number__c = 0, ISPICKVAL(dwp_kitv__visit_status_type__c, &quot;05&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>¿Terminó visita sin envío de Minuta?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_BPyP_Visitas_de_mi_equipo__c</fullName>
        <description>Este campo devuelve &quot;true&quot; si el usuario que visualiza la vista de lista &quot;Todas las visitas&quot; pertenece a la misma oficina que los propietarios de los registros.</description>
        <formula>Owner:User.CR__c =  $User.CR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visitas de mi equipo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_CF_BBVAlsRating__c</fullName>
        <description>Campo que guarda el rating que asigna el Director Divisional para KPI</description>
        <label>Calificación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Malo</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Regular</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Bueno</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Muy Bueno</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_CF_Comments__c</fullName>
        <description>Campo de área de texto para guardar los comentarios del rating hecho por el Director Divisional hacia el Gerente Regional</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comentarios</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_CF_CorreoEnviado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo de casilla que se pone verdadero cuando se ha enviado la minuta por correo</description>
        <label>Correo enviado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_CF_Division__c</fullName>
        <description>Campo formulado para saber la división a la que pertenece el usuario</description>
        <formula>TEXT(Owner:User.Divisi_n__c)</formula>
        <label>División</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_CF_DuracionVisitaMinutos__c</fullName>
        <description>Campo formulado para obtener la duración en minutos de una visita, tomando en cuenta las fechas/hora de check in y check out</description>
        <formula>(Check_Out_Date_Time__c - Check_In_Date_Time__c ) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duración de la visita (minutos)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_CF_NoVisita__c</fullName>
        <description>Campo autonumérico para identificar el número de las Visitas de Consumer Finance</description>
        <displayFormat>V-{0}</displayFormat>
        <label>No. de Visita</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>MX_CF_NombreBanco__c</fullName>
        <description>Campo formulado que contiene el nombre del banco para mostra en la plantilla de correo de visita calificada</description>
        <formula>$Label.MX_ENGMX_NombreBanco</formula>
        <label>Nombre Banco</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_CF_ObjetivoVisita__c</fullName>
        <description>Campo de lista de selección múltiple para elegir uno o mas objetivos de la visita para medir los KPI</description>
        <label>Actividades/Objetivos de la Visita</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>MX_CF_TipoVisita__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Compra Inteligente</fullName>
                </value>
                <value>
                    <fullName>Seguros Bancomer</fullName>
                </value>
                <value>
                    <fullName>Seminuevos</fullName>
                </value>
                <value>
                    <fullName>Share / Actividad</fullName>
                </value>
                <value>
                    <fullName>Comisiones</fullName>
                </value>
                <value>
                    <fullName>Plan Piso</fullName>
                </value>
                <value>
                    <fullName>Tasa de aprobación</fullName>
                </value>
                <value>
                    <fullName>ANC</fullName>
                </value>
                <value>
                    <fullName>AP – PM</fullName>
                </value>
                <value>
                    <fullName>Capacitación</fullName>
                </value>
                <value>
                    <fullName>Oferta comercial del mes</fullName>
                </value>
                <value>
                    <fullName>PDM</fullName>
                </value>
                <value>
                    <fullName>Referencias Banca Comercial</fullName>
                </value>
                <value>
                    <fullName>Rentabilidad distribuidor</fullName>
                </value>
                <value>
                    <fullName>Programa de Lealtad</fullName>
                </value>
                <value>
                    <fullName>Contrato Mercantil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_CF_RazonSocialBanco__c</fullName>
        <description>Campo formulado que tiene la razón social del banco, se utiliza para poder mostrar el valor en la plantilla de correo de calificación de la visita</description>
        <formula>$Label.MX_ENGMX_RazonSocialBanco</formula>
        <label>Razón Social Banco</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_CF_TipoReunion__c</fullName>
        <description>Campo de lista de selección para tipo de reunión en Visita de Negocio</description>
        <label>Tipo de reunión</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MX_CF_TipoVisita__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Centro de Negocios</fullName>
                </value>
                <value>
                    <fullName>Traslados</fullName>
                </value>
                <value>
                    <fullName>Reunión en sede</fullName>
                </value>
                <value>
                    <fullName>Visita Ocular</fullName>
                </value>
                <value>
                    <fullName>Audio Conferencia</fullName>
                </value>
                <value>
                    <fullName>Presencial</fullName>
                </value>
                <value>
                    <fullName>Vídeo Conferencia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_CF_TipoVisita__c</fullName>
        <description>Campo de lista de selección para tipo de reporte de Consumer Finance</description>
        <label>Tipo de visita</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visita Ejecutiva</fullName>
                </value>
                <value>
                    <fullName>Visita Operativa</fullName>
                </value>
                <value>
                    <fullName>Visita de Negocio</fullName>
                </value>
                <value>
                    <fullName>Reunión Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_CF_VisitaCalificada__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo casilla que se marca cuando la visita ha sido calificada y enviada por correo, no se muestra en formato de página solo es para validación</description>
        <label>¿Visita calificada?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_EU_Correos_contactos__c</fullName>
        <description>Correos de los contactos a los que se les enviará la minuta.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Correos de contactos</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MX_HI_Candidatos_Interesados__c</fullName>
        <label>Candidatos Interesados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_HP_Cargo__c</fullName>
        <formula>$User.Title</formula>
        <label>Cargo usuario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_IRENE_NameMainContact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre del Contacto principal</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <!-- <fields>
        <fullName>MX_EU_TopicVisPropuestaComercial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relacion a una Propuesta Comercial a un tema.</description>
        <label>Propuesta Comercial</label>
        <referenceTo>Propuesta_Comercial__c</referenceTo>
        <relationshipLabel>Temas a tratar</relationshipLabel>
        <relationshipName>MX_EU_TopicVisPropuestasComercial</relationshipName>
        <type>Lookup</type>
    </fields> -->
    <fields>
        <fullName>MX_PF_ca_director__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo de ayuda para la actualización de etapas de PF Lean</description>
        <label>Aprobación de director</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_PF_ca_riesgos__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Casilla para que el director pueda mandar a aprobación por parte de riesgos</description>
        <label>Aprobación de admisión de riesgos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_PF_Etapa_PF_LEAN__c</fullName>
        <description>Muestra las etapas del reporte de visita PF LEAN</description>
        <inlineHelpText>Etapa</inlineHelpText>
        <label>Etapa PF LEAN</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nueva Visita</fullName>
                    <default>true</default>
                    <label>Nueva Visita</label>
                </value>
                <value>
                    <fullName>Con Check In</fullName>
                </value>
                <value>
                    <fullName>En Espera de Vo. Bo</fullName>
                </value>
                <value>
                    <fullName>Autorizado</fullName>
                </value>
                <value>
                    <fullName>Reporte Generado</fullName>
                </value>
                <value>
                    <fullName>Con Check Out</fullName>
                    <isActive>false</isActive>
                    <label>Con Check Out</label>
                </value>
                <value>
                    <fullName>Con imagenes</fullName>
                    <isActive>false</isActive>
                    <label>Con imagenes</label>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                    <isActive>false</isActive>
                    <label>Rechazado</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PF_Segmento_del_cliente__c</fullName>
        <description>Segmento de cliente para la banca de empresas y gobierno reporte de visitas PF LEAN</description>
        <inlineHelpText>Segmento de cliente</inlineHelpText>
        <label>Segmento del cliente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mediana Empresa</fullName>
                </value>
                <value>
                    <fullName>Empresarial</fullName>
                </value>
                <value>
                    <fullName>Corporativo</fullName>
                </value>
                <value>
                    <fullName>Gobierno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PYME_ObjetivoBPyP__c</fullName>
        <description>Objetivos de Visita para tipos de visita BPyP</description>
        <label>Objetivo</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MX_BIE_TipoVisitaLLamada__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contratacion de producto o servicio</fullName>
                </value>
                <value>
                    <fullName>Estructuracion de operación de credito</fullName>
                </value>
                <value>
                    <fullName>Oferta de Producto o servicio de BBVA Bancomer</fullName>
                </value>
                <value>
                    <fullName>Ofrecer soluciones integrales</fullName>
                </value>
                <value>
                    <fullName>Prospeccción de clientes Nuevos</fullName>
                </value>
                <value>
                    <fullName>Atención a Proyectos y Planes de cuenta (Sinergia)</fullName>
                </value>
                <value>
                    <fullName>Presentar a BBVA Bancomer como socio estrategico</fullName>
                </value>
                <value>
                    <fullName>Actualización de información</fullName>
                </value>
                <value>
                    <fullName>Resolver inquietudes sobre incidencias o aclarciones</fullName>
                </value>
                <value>
                    <fullName>Asesoria en productos o servicios BBVA Bancomer</fullName>
                </value>
                <value>
                    <fullName>Invitación de Eventos</fullName>
                </value>
                <value>
                    <fullName>Servicios no Financieros</fullName>
                </value>
                <value>
                    <fullName>Servicing</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resumen_Topic__c</fullName>
        <description>Cuenta el número de topicos existentes en la visita.</description>
        <inlineHelpText>Conteo de todos los tópicos cerrados de la visita.</inlineHelpText>
        <label>Resumen Topic</label>
        <summaryFilterItems>
            <field>dwp_kitv__Visit_Topic__c.dwp_kitv__visit_done_type__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>dwp_kitv__Visit_Topic__c.dwp_kitv__visit_id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Resumen_topic_Oportunidad__c</fullName>
        <description>Cuenta el número de topicos existentes en la visita que tengan oporunidades relacionadas.</description>
        <label>Resumen topic Oportunidad</label>
        <summaryFilterItems>
            <field>dwp_kitv__Visit_Topic__c.Tema_Oportunidad__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>dwp_kitv__Visit_Topic__c.dwp_kitv__visit_id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Visit</label>
    <listViews>
        <fullName>MX_BPyP_Todas_las_visitas</fullName>
        <columns>NAME</columns>
        <columns>dwp_kitv__account_id__c</columns>
        <columns>dwp_kitv__visit_start_date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>dwp_kitv__visit_status_type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MX_BPyP_Visitas_de_mi_equipo__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Todas las visitas de la oficina</label>
        <sharedTo>
            <role>BPYP_DIRECTOR_OFICINA_ACAPULCO</role>
            <role>BPYP_DIRECTOR_OFICINA_AGUASCALIENTES</role>
            <role>BPYP_DIRECTOR_OFICINA_ANDARES</role>
            <role>BPYP_DIRECTOR_OFICINA_BANCA_ACOXPA</role>
            <role>BPYP_DIRECTOR_OFICINA_BANCA_DEL_VALLE</role>
            <role>BPYP_DIRECTOR_OFICINA_BANCA_PERISUR</role>
            <role>BPYP_DIRECTOR_OFICINA_BANCA_PLAZA_FORUM</role>
            <role>BPYP_DIRECTOR_OFICINA_CANCUN</role>
            <role>BPYP_DIRECTOR_OFICINA_CD_JUAREZ</role>
            <role>BPYP_DIRECTOR_OFICINA_CD_OBREGON</role>
            <role>BPYP_DIRECTOR_OFICINA_CELAYA</role>
            <!-- <role>BPYP_DIRECTOR_OFICINA_MANACAR</role> -->
            <role>BPYP_DIRECTOR_OFICINA_CHIHUAHUA</role>
            <role>BPYP_DIRECTOR_OFICINA_COATZACOALCOS</role>
            <role>BPYP_DIRECTOR_OFICINA_COLIMA</role>
            <role>BPYP_DIRECTOR_OFICINA_CUERNAVACA</role>
            <role>BPYP_DIRECTOR_OFICINA_CULIACAN</role>
            <role>BPYP_DIRECTOR_OFICINA_CUMBRES</role>
            <role>BPYP_DIRECTOR_OFICINA_DURANGO</role>
            <role>BPYP_DIRECTOR_OFICINA_GUADALAJARA_TERRANOVA</role>
            <role>BPYP_DIRECTOR_OFICINA_HERMOSILLO</role>
            <role>BPYP_DIRECTOR_OFICINA_INTERLOMAS</role>
            <role>BPYP_DIRECTOR_OFICINA_IRAPUATO</role>
            <role>BPYP_DIRECTOR_OFICINA_LEON</role>
            <role>BPYP_DIRECTOR_OFICINA_LILAS</role>
            <role>BPYP_DIRECTOR_OFICINA_LOMAS</role>
            <role>BPYP_DIRECTOR_OFICINA_LOMAS1</role>
            <role>BPYP_DIRECTOR_OFICINA_LOMAS_VERDES</role>
            <role>BPYP_DIRECTOR_OFICINA_LOS_CABOS</role>
            <role>BPYP_DIRECTOR_OFICINA_MAZARIK</role>
            <role>BPYP_DIRECTOR_OFICINA_MAZATLAN</role>
            <role>BPYP_DIRECTOR_OFICINA_MERIDA</role>
            <role>BPYP_DIRECTOR_OFICINA_MEXICALI</role>
            <role>BPYP_DIRECTOR_OFICINA_MONTERREY_COUNTRY</role>
            <role>BPYP_DIRECTOR_OFICINA_MONTERREY_VALLE_SENA</role>
            <role>BPYP_DIRECTOR_OFICINA_MORELIA</role>
            <role>BPYP_DIRECTOR_OFICINA_MOROLEON</role>
            <role>BPYP_DIRECTOR_OFICINA_OAXACA</role>
            <role>BPYP_DIRECTOR_OFICINA_PACHUCA</role>
            <role>BPYP_DIRECTOR_OFICINA_PASEOS_CHURUBUSCO</role>
            <role>BPYP_DIRECTOR_OFICINA_PEDREGAL</role>
            <role>BPYP_DIRECTOR_OFICINA_PUEBLA</role>
            <role>BPYP_DIRECTOR_OFICINA_QUERETARO</role>
            <role>BPYP_DIRECTOR_OFICINA_REYNOSA</role>
            <role>BPYP_DIRECTOR_OFICINA_SALTILLO</role>
            <role>BPYP_DIRECTOR_OFICINA_SAN_LUIS_POTOSI</role>
            <role>BPYP_DIRECTOR_OFICINA_SATELITE</role>
            <role>BPYP_DIRECTOR_OFICINA_TAMPICO</role>
            <role>BPYP_DIRECTOR_OFICINA_TEPATITLAN</role>
            <role>BPYP_DIRECTOR_OFICINA_TEPIC</role>
            <role>BPYP_DIRECTOR_OFICINA_TIJUANA</role>
            <role>BPYP_DIRECTOR_OFICINA_TOLUCA</role>
            <role>BPYP_DIRECTOR_OFICINA_TORREON</role>
            <role>BPYP_DIRECTOR_OFICINA_TORRE_BANCOMER</role>
            <role>BPYP_DIRECTOR_OFICINA_TUXTLA_GUTIERREZ</role>
            <role>BPYP_DIRECTOR_OFICINA_UHN_GUADALAJARA</role>
            <role>BPYP_DIRECTOR_OFICINA_UHN_MEXICO</role>
            <role>BPYP_DIRECTOR_OFICINA_UHN_MONTERREY</role>
            <role>BPYP_DIRECTOR_OFICINA_URUAPAN</role>
            <role>BPYP_DIRECTOR_OFICINA_VERACRUZ</role>
            <role>BPYP_DIRECTOR_OFICINA_VILLAHERMOSA</role>
            <role>BPYP_DIRECTOR_OFICINA_VITO_ALESSIO</role>
            <role>BPYP_DIRECTOR_OFICINA_XALAPA</role>
            <role>BPYP_DIRECTOR_OFICINA_ZACATECAS</role>
            <role>BPYP_DIRECTOR_OFICINA_ZAMORA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Todos</fullName>
        <columns>NAME</columns>
        <columns>dwp_kitv__account_id__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>dwp_kitv__visit_start_date__c</columns>
        <columns>dwp_kitv__visit_status_type__c</columns>
        <filterScope>Mine</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>Visitas_Finalizadas</fullName>
        <columns>NAME</columns>
        <columns>dwp_kitv__account_id__c</columns>
        <columns>dwp_kitv__visit_status_type__c</columns>
        <columns>dwp_kitv__visit_start_date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>dwp_kitv__visit_status_type__c</field>
            <operation>equals</operation>
            <value>06</value>
        </filters>
        <label>Visitas Finalizadas</label>
    </listViews>
    <listViews>
        <fullName>Visitas_en_Proceso</fullName>
        <columns>NAME</columns>
        <columns>dwp_kitv__account_id__c</columns>
        <columns>dwp_kitv__visit_status_type__c</columns>
        <columns>dwp_kitv__visit_start_date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>dwp_kitv__visit_status_type__c</field>
            <operation>equals</operation>
            <value>01,02,03,04,05</value>
        </filters>
        <label>Visitas en Proceso</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <recordTypes>
        <fullName>MX_BPP_Llamada_BPyP</fullName>
        <active>true</active>
        <label>Llamada BPyP</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_BPP_Llamada_BPyP_CI</fullName>
        <active>true</active>
        <label>Llamada BPyP CI</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_BPP_Llamada_BPyP_FI</fullName>
        <active>true</active>
        <label>Llamada BPyP FI</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_PYME_Llamada_PyME</fullName>
        <active>true</active>
        <description>Llamada PyME</description>
        <label>Llamada PyME</label>
    </recordTypes>
</CustomObject>